repository, controller and service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:artist
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.h2.console.settings.web-allow-others=true
+spring.datasource.url=jdbc:mysql://localhost:3306/bookstore
+spring.datasource.username=kipgoing
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=none
